# imagine-fp-samples

adequacy-coq/: README.md
adequacy-coq/code/: README.md
adequacy-coq/code/cbv-language/doc/: Adequacy.html  CoherenceExample.html  DenoApprox.html  DomainStuff.html  Domains.html  EmbProjPair.html  ExSem.html  InSem.html  Lang.html  MoT.html  OperApprox.html  OperSem.html  PredomProd.html  PredomRecCpo.html  StrictExt.html  Types.html  Utils.html  fib_Adequacy.html  index.html  toc.html
adequacy-coq/code/cbv-language/domain-theory/: Categories.v  Makefile  MetricCore.v  MetricRec.v  PredomCore.v  PredomFix.v  PredomKleisli.v  PredomLift.v  PredomRec.v  domoprs.v  moperational.v  mpremet.v  msyntax.v  typedadequacy.v  typeddensem.v  typedlambda.v  typedopsem.v  typedsoundness.v  typedsubst.v  uniiade.v  uniiop.v  uniirec.v  uniisound.v
adequacy-coq/code/cbv-language/extended-cbn/: Biorthogonality.v  CCC.v  Common.v  Compiler.v  Correctness.v  DenApprox.v  Denot.v  Makefile  Makefile.conf  OpApprox.v  Operator.v  PredomMore.v  PredomNary.v  README  Rel.v  RelDefs.v  SemChain.v  Sets.v  Source.v  StepIndexing.v  Target.v  Util.v  VecList.v  _CoqProject
adequacy-coq/code/cbv-language/formalization/: Adequacy.v  CoherenceExample.glob  CoherenceExample.v  CoherenceExample.vo  DenoApprox.v  DomainStuff.v  Domains.v  EmbProjPair.v  ExSem.v  InSem.v  Lang.v  Makefile.conf  MoT.v  OperApprox.v  OperSem.v  PredomProd.v  StrictExt.v  Types.v  Utils.v  _CoqProject  fib_Adequacy.glob  fib_Adequacy.v  fib_Adequacy.vo
adequacy-coq/code/lazy-language/doc/: BOp.html  Biorthogonality.html  Compiler.html  (+13 more)
attribute-grammars/: README.md
attribute-grammars/code/RepMin/: RepMin.hs  RepMinAG.ag
cpp-compiler/: README.md
cpp-compiler/code/: LICENSE  README.md  compi.cabal  package.yaml
cpp-compiler/code/doc/: informe.tex
cpp-compiler/code/src/: InterCode.hs  Machine.hs  Main.hs  Parser.hs  StaticCheck.hs  Syntax.hs
imagine-code-gen/: README.md
imagine-code-gen/code/: ImagineCompiler.hs  ImagineSpec.hs  StaticChecksMonad.hs
universal-algebra-agda/: README.md
while-interpreter/: README.md
while-interpreter/code/: README.md  while.cabal
while-interpreter/code/doc/: grammar.tex  while.tex
while-interpreter/code/examples/: add.xwhile  append.while  ej1.xwhile  ejRewrite.xwhile  idbasic.while  interp.xwhile  interp2.xwhile  store.xwhile  sum1.while
while-interpreter/code/src/: Eval.hs  Expr.hs  Parser.hs  Prog.hs  ProgAsValue.hs  Value.hs
while-interpreter/code/src/ExtendedLanguage/: Compiler.hs  ExtLanguage.hs  Macro.hs  Rewrite.hs
while-interpreter/code/src/Main/IWhile/: Cmd.hs  CmdHandler.hs  Completion.hs  Main.hs  Monad.hs
while-interpreter/code/src/Main/While/: ArgsHandler.hs  Main.hs
while-interpreter/code/src/Parser/: ParserBase.hs  ParserExt.hs  ParserProg.hs  ParserValue.hs
(+111 files in other folders)
