name:                while
version:             0.1.0.0
synopsis:            Implementacion del lenguaje While y su semantica de
                     acuerdo al libro "Computability and Complexity" de
                     Neil Jones.
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Javier Blanco, Renato Cherini,
                     Alejandro Gadea, Emmanuel Gunther, Miguel Pagano
maintainer:          alex.aegf@gmail.com, manu.gunther@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable iwhile
  GHC-Options:         -O2 -Wall
  hs-source-dirs:      src
  main-is:             Main/IWhile/Main.hs
  other-modules:       Main.IWhile.Cmd,
                       Main.IWhile.CmdHandler,
                       Main.IWhile.Completion,
                       Main.IWhile.Monad,
                       Eval,
                       Expr,
                       ExtendedLanguage.Compiler,
                       ExtendedLanguage.ExtLanguage,
                       Parser,
                       Parser.ParserBase,
                       Parser.ParserExt,
                       Parser.ParserProg,
                       Parser.ParserValue,
                       ProgAsValue,
                       Prog,
                       Value
  build-depends:       base >=4.5,
                       haskeline>=0.7.1.3,
                       containers >=0.5, 
                       mtl >=2.1, 
                       wl-pprint >=1.1, 
                       parsec >=3.1,
                       pretty-tree >= 0.1.0.0,
                       pretty >= 1.1.2.0,
                       filepath >= 1.4.0.0,
                       directory >= 1.2.0.1

executable while
  GHC-Options:         -O2 -Wall
  hs-source-dirs:      src
  main-is:             Main/While/Main.hs
  other-modules:       Main.While.ArgsHandler,
                       Eval,
                       Expr,
                       ExtendedLanguage.Compiler,
                       ExtendedLanguage.ExtLanguage,
                       Parser,
                       Parser.ParserBase,
                       Parser.ParserExt,
                       Parser.ParserProg,
                       Parser.ParserValue,
                       ProgAsValue,
                       Prog,
                       Value
  build-depends:       base >=4.5, 
                       containers >=0.5, 
                       mtl >=2.1, 
                       wl-pprint >=1.1, 
                       parsec >=3.1,
                       pretty-tree >= 0.1.0.0,
                       pretty >= 1.1.2.0,
                       filepath >= 1.4.0.0
